# gitstate

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  config.example.yaml  decisions.md  docker-compose.yml  go.mod  go.sum  index.html  roadmap.md
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  daemon.rs  lib.rs  main.rs
cmd/billsim/: main.go  model.go  model_test.go
cmd/gitstate/: main.go
cmd/gittrack/: commands.go  gittrack_test.go  render.go  types.go
cmd/migrate/: main.go
cmd/seed/: main.go
crates/gitstate-classify/: Cargo.toml
crates/gitstate-classify/src/: effort.rs  heuristic.rs  lib.rs  llm.rs  personalize.rs  taxonomy_verify.rs
crates/gitstate-cli/: Cargo.toml
crates/gitstate-cli/src/: main.rs
crates/gitstate-cli/src/cmd/: category.rs  context.rs  insight.rs  misc.rs  mod.rs  repo.rs  seed.rs  serve.rs
crates/gitstate-core/: Cargo.toml
crates/gitstate-core/src/: analytics.rs  derive.rs  domain.rs  error.rs  health.rs  ids.rs  lib.rs  taxonomy.rs  traits.rs
crates/gitstate-daemon/: Cargo.toml
crates/gitstate-daemon/src/: dto.rs  lib.rs  main.rs  ops.rs  router.rs  serve_static.rs  state.rs
crates/gitstate-daemon/src/routes/: categories.rs  classify.rs  contexts.rs  health_metrics.rs  meta.rs  mod.rs  repos.rs  trackers.rs
crates/gitstate-daemon/tests/: api.rs
crates/gitstate-forge/: Cargo.toml
crates/gitstate-forge/src/: cli.rs  github.rs  gitlab.rs  lib.rs  rest.rs
crates/gitstate-git/: Cargo.toml  build.rs  iconv_shim.c
crates/gitstate-git/src/: blame.rs  derive_contrib.rs  derive_state.rs  diff.rs  history.rs  lib.rs  open.rs  szz.rs  util.rs
crates/gitstate-store/: Cargo.toml
crates/gitstate-store/migrations/: 0001_init.sql
crates/gitstate-store/src/: lib.rs  migrations.rs  schema.rs  store_impl.rs
crates/gitstate-sync/: Cargo.toml
crates/gitstate-sync/src/: crdt.rs  lib.rs  ops.rs  transport.rs
crates/gitstate-tracker/: Cargo.toml
crates/gitstate-tracker/src/: export.rs  jira.rs  lib.rs  linear.rs  map.rs
deploy/: fly.toml  gitstate.service
docs/: ARCHITECTURE.md  CLASSIFICATION-AND-TAXONOMY.md  FORGE-SETUP.md  GETTING-STARTED.md  MIGRATION-NOTES.md  P2P-CONTEXTS.md  security.md
ee/: LICENSE
ee/admin/: admin.go
ee/billing/: paystack.go
internal/accounting/: errors.go  freshbooks.go  newproviders_test.go  oauth.go  provider.go  provider_test.go  quickbooks.go  sage.go  xero.go  zohobooks.go
internal/admin/: admin.go  analytics_geo.go  auth.go  login.go  routes.go
internal/analytics/: analytics.go  analytics_test.go  capture.go  capture_test.go  geo.go  geo_test.go
internal/api/: accounting.go  accounting_oauth_authz_test.go  accounting_test.go  agent_runs_test.go  analytics.go  auth.go  billing.go  calendar.go  capacity.go  capacity_authz_test.go  chat.go  connect.go  context.go  contribution.go  contribution_extras.go  contribution_window_test.go  contributors.go  estimation.go  githubapp_connect_test.go  invoices.go  job_handlers.go  metrics.go  models.go  notifications.go  oauth.go  orgs.go  profile.go  profile_test.go  projects.go  public.go  repo_sync_test.go  role_gate_test.go  router.go  search.go  settings_llm.go  sync.go  tokens.go  tokens_context_test.go  webhooks.go  webhooks_autoregister_test.go  (+1 more)
internal/auth/: password_test.go
internal/billing/: scheduler.go  service.go  service_test.go
internal/calendar/: calendar.go  calendar_test.go  google.go  helpers.go  microsoft.go
internal/calibration/: cohort.go  cohort_test.go  curve.go  curve_test.go  recompute.go  recompute_db_test.go
internal/chat/: engine.go  engine_test.go  prompt.go  tools.go  tools_action.go  tools_read.go  tools_read_db_test.go
internal/config/: config.go  config_githubapp_test.go  config_login_test.go  config_test.go
internal/contribution/: contribution.go  contribution_test.go  extras.go  extras_db_test.go
internal/contributors/: cluster.go  cluster_test.go  detect_db_test.go
internal/crypto/: crypto_test.go
internal/db/: db.go
internal/docs/: docs.go
internal/email/: email.go
internal/git/: git.go
internal/gitanalysis/: gitanalysis_test.go  helpers_test.go
internal/githubapp/: githubapp.go  githubapp_test.go
internal/importer/: importer_test.go
internal/jobs/: jobs.go
internal/llm/: catalog.go  catalog_test.go  gateway.go  openai.go  openai_test.go  org.go  provider.go  service.go
internal/metrics/: compute.go  involvement_reviews_test.go
internal/middleware/: apitoken.go  apitoken_test.go  middleware.go  orgscope.go  ratelimit.go  ratelimit_clientip_test.go
internal/notifications/: deliver.go  deliver_ssrf_test.go  digest.go  render.go  render_test.go
internal/oauth/: calendar.go  connections.go  providers.go  providers_login_test.go
internal/report/: report.go  report_test.go
internal/store/: accounting.go  accounting_test.go  admin.go  agent_runs.go  analytics.go  analytics_events.go  analytics_events_test.go  analytics_test.go  orgs.go  (+40 more)
migrations/: 20260618_001_baseline.sql  20260618_001_init.sql  20260618_004_per_builder_pricing.sql  20260618_005_platform_connections.sql  20260618_006_org_llm_settings.sql  20260618_007_calendar_connections.sql  20260618_008_leave_types_balances.sql  20260619_009_contribution.sql  20260619_013_notifications.sql  20260619_014_contribution_extras.sql  20260620_016_cheapest_pricing.sql  20260621_019_agent_run_links.sql  20260621_022_analytics_events.sql  20260622_023_drop_equity.sql  20260622_025_perf_indexes.sql  20260623_002_connection_type.sql  20260623_003_repo_analyzed_head.sql  20260623_004_contributors.sql  20260624_001_snapshot_contributor.sql  20260624_003_billing_lifecycle.sql  20260624_006_wallet_and_model_usage.sql
scripts/: screenshots.mjs
site/: LICENSE.txt  docs.html  index.html
web/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.js
(+209 files in other folders)
