[package]
name = "gitstate-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "gitstate command-line interface (bin: gitstate)"

[[bin]]
name = "gitstate"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
gitstate-core = { workspace = true }
gitstate-daemon = { workspace = true }

[lints]
workspace = true
