[package]
name = "gitstate-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "gitstate domain model: types, traits, pure derivation helpers, and the signed taxonomy. No I/O."

[dependencies]
async-trait = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
