[package]
name = "gitstate-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "gitstate headless daemon — axum server that serves web/dist and the JSON API; the always-on local peer"

[[bin]]
name = "gitstated"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
gitstate-core = { workspace = true }
gitstate-git = { workspace = true }
gitstate-forge = { workspace = true }
gitstate-classify = { workspace = true }
gitstate-store = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { workspace = true }
gitstate-store = { workspace = true }
gitstate-classify = { workspace = true }
gitstate-core = { workspace = true }

[lints]
workspace = true
