[package]
name = "gitstate-forge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "gitstate forge clients: GitHub + GitLab via the gh/glab CLIs (with REST/GraphQL token fallback) → PRs, issues, reviews"

[dependencies]
gitstate-core = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process"] }

[lints]
workspace = true
