[package]
name = "gitstate-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "gitstate local persistence: rusqlite (SQLite) store for repos, derived caches, contexts, and categories"

[dependencies]
gitstate-core = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
